--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
-.social-icon {
-  color: white;
+@media screen and (max-width:576px) { 
+  .course-img{
+    width: 100%;
+    height: 270px;
+  }
 }
